# fpm

./: .bumpversion.cfg  README.md  pyproject.toml
fpm/: README.md  cli.py  pkg.py
scratch/: mod.py
scratch/semver/: Version.py  __main__.py  cli.py
